exemplo-prefix/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nginx-stripprefix
  namespace: sistemas
spec:
  stripPrefix:
    prefixes:
      - /nginx
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: PathPrefix(`/nginx`)
    services:
    - name: nginx-service
      port: 80
    middlewares:
    - name: nginx-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute-tls
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: PathPrefix(`/nginx`) 
    services:
    - name: nginx-service
      port: 80
    middlewares:
    - name: nginx-stripprefix
  tls:
    secretName: sicoobunicoob-secret
